<resources>
    <string name="app_name">SmartButler</string>
    <string name="app_butler">服务管家</string>
    <string name="app_wechat">微信精选</string>
    <string name="app_girl">美女社区</string>
    <string name="app_center">个人中心</string>
    <string name="string_login">登录</string>
    <string name="string_reg">注册</string>
    <string name="string_desc">这个人很懒，什么都没留下！</string>
    <string name="reg_success">注册成功</string>
    <string name="reg_defeat">注册失败</string>
    <string name="et_nothing">输入框不能为空</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="age">年龄</string>
    <string name="introduction">简介</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="splash">闪屏页</string>
    <string name="go_to_homepage">进入主页</string>
    <string name="enter_it_again">再次输入密码</string>
    <string name="email">邮箱</string>
    <string name="hint">注册成功需要前往邮箱验证，否则无法登录！</string>
    <string name="remember_password">记住密码</string>
    <string name="forgot_password">忘记密码</string>
    <string name="updated_password">修改密码</string>
    <string name="old_psw">旧密码</string>
    <string name="new_psw">新密码</string>
    <string name="reset_psw">请前往邮箱重置密码</string>
    <string name="failed_to_send">发送失败</string>
    <string name="inconsistency_of_ciphers">密码不一致</string>
    <string name="failed_modified">修改失败</string>
    <string name="successfully_modified">修改成功</string>
    <string name="login_failed">登录失败</string>
    <string name="email_activation">请前往邮箱激活</string>
    <string name="text_now_login">正在登录..</string>
    <string name="name">姓名:</string>
    <string name="center_sex">性别:</string>
    <string name="center_age">年龄:</string>
    <string name="center_desc">简介:</string>
    <string name="edit_user">编辑资料</string>
    <string name="make_sure_to_modify">确定修改</string>
    <string name="logistics_inquiry">物流查询</string>
    <string name="attributive_inquiry">归属地查询</string>
    <string name="logout">退出登录</string>
    <string name="camera">拍照</string>
    <string name="photo">图库</string>
    <string name="cancel">取消</string>
    <string name="logistics_company">快递公司</string>
    <string name="logistics_number">快递单号</string>
    <string name="query">查询</string>
    <string name="phone_number">手机号码</string>
    <string name="phone_nothing">手机号码不能为空</string>
    <string name="send">发送</string>
    <string name="length_exceeds_limit">长度超过限制</string>
    <string name="please_enter_content">请输入内容</string>
    <string name="welfare">福利</string>
    <string name="default_text">你好,我是小杰！！</string>
    <string name="tts_des">开启后可与管家进行语音对话</string>
    <string name="tts">语音播报</string>
    <string name="sms">智能短信提醒</string>
    <string name="sms_des">开启之后收到短信将弹框提示</string>
    <string name="detection_version">检测版本</string>
    <string name="version_des">检测是否有新版本提示下载</string>
    <string name="latest_version">当前是最新版本</string>
    <string name="download">下载更新</string>
    <string name="share_code">分享</string>
    <string name="share_des">将软件分享给朋友</string>
    <string name="scan">扫一扫</string>
    <string name="scan_des">扫描二维码或者条形码</string>
    <string name="location">我的位置</string>
    <string name="location_des">时刻掌握自身位置</string>
    <string name="about">关于软件</string>
    <string name="about_des">https://github.com/1458883958/SmartButler</string>
</resources>
