<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/updated_password"/>
    <EditText
        android:id="@+id/et_old_psw"
        android:hint="@string/old_psw"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_new_psw"
        android:hint="@string/new_psw"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_new_again_psw"
        android:hint="@string/enter_it_again"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:id="@+id/btn_updated_psw"
        android:background="@drawable/button_bg"
        android:text="@string/updated_password"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/forgot_password"/>
    <EditText
        android:id="@+id/up_email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:id="@+id/btn_forgot_psw"
        android:background="@drawable/button_bg"
        android:text="@string/forgot_password"
        android:layout_height="wrap_content" />


</LinearLayout>