<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#fff"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:text="@string/tts"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:text="@string/tts_des"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_button"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:background="#fff"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18sp"
                android:text="@string/sms"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:text="@string/sms_des"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_sms"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>